--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
       <artifactId>junit-platform-runner</artifactId>
       <version>1.3.2</version>
     </dependency>
+    <dependency>
+      <scope>test</scope>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>1.7.25</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
