--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
     <dependency>
       <groupId>dk.alexandra.fresco</groupId>
       <artifactId>core</artifactId>
-      <version>1.1.3-SNAPSHOT</version>
+      <version>1.1.3</version>
     </dependency>
     <dependency>
       <scope>test</scope>
       <groupId>dk.alexandra.fresco</groupId>
       <artifactId>core</artifactId>
-      <version>1.1.3-SNAPSHOT</version>
+      <version>1.1.3</version>
       <type>test-jar</type>
     </dependency>
     <dependency>
