--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
       <version>1.1.3</version>
     </dependency>
     <dependency>
+      <groupId>dk.alexandra.fresco</groupId>
+      <artifactId>spdz</artifactId>
+      <version>1.1.3</version>
+    </dependency>
+    <dependency>
       <scope>test</scope>
       <groupId>dk.alexandra.fresco</groupId>
       <artifactId>core</artifactId>
