--- a/pom.xml
+++ b/pom.xml
@@ -43,16 +43,21 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.25</version>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>ch.qos.logback</groupId>-->
-      <!--<artifactId>logback-classic</artifactId>-->
-      <!--<version>1.2.3</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-nop</artifactId>
-      <version>1.7.25</version>
+      <artifactId>log4j-over-slf4j</artifactId>
+      <version>1.7.22</version>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.slf4j</groupId>-->
+      <!--<artifactId>slf4j-nop</artifactId>-->
+      <!--<version>1.7.25</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>info.picocli</groupId>
       <artifactId>picocli</artifactId>
