--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
       <version>1.1.3</version>
     </dependency>
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <scope>test</scope>
       <groupId>dk.alexandra.fresco</groupId>
       <artifactId>core</artifactId>
