--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>dk.alexandra.fresco</groupId>
@@ -18,6 +24,11 @@
       <groupId>dk.alexandra.fresco</groupId>
       <artifactId>spdz</artifactId>
       <version>1.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.aicis</groupId>
+      <artifactId>fresco-dp</artifactId>
+      <version>master-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
