--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
       <version>1.1.3</version>
     </dependency>
     <dependency>
+      <groupId>dk.alexandra.fresco</groupId>
+      <artifactId>mascot</artifactId>
+      <version>1.1.3</version>
+    </dependency>
+    <dependency>
       <groupId>com.github.aicis</groupId>
       <artifactId>fresco-dp</artifactId>
       <version>master-SNAPSHOT</version>
