Fixes fresco-dp to specific version
Jitpack has apparently failed to compile most recent one. This is just
a quick fix to at least be able to compile our code again.

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>com.github.aicis</groupId>
       <artifactId>fresco-dp</artifactId>
-      <version>master-SNAPSHOT</version>
+      <version>master-d7a9cf0fb1-1</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
